<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvBudget"
        style="@style/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/budget_buster" />

    <ScrollView
        android:id="@+is/scroll"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvAmount"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/amt_spent" />

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="start"
                    android:gravity="right"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvDays"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/days" />

                <EditText
                    android:id="@+id/etDays"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvMonths"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/months_per_year" />

                <EditText
                    android:id="@+id/etMonths"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:inputType="number"
                    android:text="@string/twelve" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvYears"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/years" />

                <EditText
                    android:id="@+id/etYears"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:inputType="number"
                    android:text="@string/one" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/bCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="calculate"
                    android:text="@string/calculate"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="3" >

                <TextView
                    android:id="@+id/tvTotal"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.00"
                    android:text="@string/total" />

                <EditText
                    android:id="@+id/etTotal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.00"
                    android:gravity="right"
                    android:inputType="number" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical" >

                <View
                    android:id="@+id/spacer"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignTop="@id/rLayout" />

                <com.google.ads.AdView
                    android:id="@+id/adMob"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spacer"
                    ads:adSize="BANNER"
                    ads:adUnitId="a150569f46510cf"
                    ads:loadAdOnCreate="true" >
                </com.google.ads.AdView>

                <TextView
                    android:id="@+id/tvSig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/adMob"
                    android:text="@string/signature"
                    android:textSize="8dp" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>