<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTarget"
        style="@style/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/target_savings" />

    <ScrollView
        android:id="@+is/scroll"
        android:layout_width="fill_parent"
        android:layout_height="600dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvGoal"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/target_savings_goal" />

                <EditText
                    android:id="@+id/etGoal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="start"
                    android:gravity="right"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvRate"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/interest" />

                <EditText
                    android:id="@+id/etRate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="start"
                    android:gravity="right"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="20" >

                <TextView
                    android:id="@+id/tvCompound"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9.00"
                    android:text="@string/compounded" />

                <Spinner
                    android:id="@+id/sCompound"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="11.00"
                    android:entries="@array/times_compounded" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvStart"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/amt_start" />

                <EditText
                    android:id="@+id/etStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="start"
                    android:gravity="right"
                    android:hint="@string/zero"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/bCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="calculate"
                    android:text="@string/calculate"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="5" >

                <TextView
                    android:id="@+id/tvTotalTime"
                    style="@style/text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.00"
                    android:text="@string/total_time" />

                <EditText
                    android:id="@+id/etTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.00"
                    android:inputType="text" />
            </LinearLayout>
            
            <RelativeLayout
                android:id="@+id/rLayout"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:orientation="vertical" >

                <View
                    android:id="@+id/spacer"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:layout_alignTop="@id/rLayout" />

                <com.google.ads.AdView
                    android:id="@+id/adMob"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spacer"
                    ads:adSize="BANNER"
                    ads:adUnitId="a150569f46510cf"
                    ads:loadAdOnCreate="true" >
                </com.google.ads.AdView>

                <TextView
                    android:id="@+id/tvSig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/adMob"
                    android:text="@string/signature"
                    android:textSize="8dp" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>